# streaming-etl-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: results.json  run_benchmark.py
src/streaming_etl/: __init__.py  bus.py  checkpoint.py  cli.py  event.py  pipeline.py  sink.py  watermark.py
tests/: test_bus.py  test_pipeline.py  test_sink.py  test_watermark.py
